--- a/APIs/Python/Tech_With_Tim/website/templates/base.html
+++ b/APIs/Python/Tech_With_Tim/website/templates/base.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -18,14 +18,26 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <div class="navbar-nav">
-          <a class="nav-item nav-link" href="/login" id="login">Login</a>
-          <a class="nav-item nav-link" href="/sign-up" id="sign-up">Sign Up</a>
-          <a class="nav-item nav-link" href="/logout" id="logout">Logout</a>
+          <a class="nav-item nav-link" href="/auth/login" id="login">Login</a>
+          <a class="nav-item nav-link" href="/auth/sign-up" id="sign-up">Sign Up</a>
+          <a class="nav-item nav-link" href="/auth/logout" id="logout">Logout</a>
           <a class="nav-item nav-link" href="/" id="home">Home</a>
         </div>
       </div>
   </nav>
-  <!-- <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0"
+  <div class="container">
+    {% block content %}
+    {% endblock %}
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
+</body>
+
+</html>
+
+<!-- Animating a bootstrap progress bar -->
+<!-- <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0"
     aria-valuemax="100">
     <div id="progressID" class="progress-bar">0%</div>
   </div>
@@ -43,9 +55,3 @@
     }
     stopInterval = setInterval(controller = count, 1000)
   </script> -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-    crossorigin="anonymous"></script>
-</body>
-
-</html>
