Creating the Sign Up Form

--- a/APIs/Python/Tech_With_Tim/website/templates/base.html
+++ b/APIs/Python/Tech_With_Tim/website/templates/base.html
@@ -24,6 +24,7 @@
           <a class="nav-item nav-link" href="/" id="home">Home</a>
         </div>
       </div>
+    </div>
   </nav>
   <div class="container">
     {% block content %}
