--- a/APIs/Python/Tech_With_Tim/website/templates/login.html
+++ b/APIs/Python/Tech_With_Tim/website/templates/login.html
@@ -1,8 +1,15 @@
 {% extends "base.html" %}
 {% block title %}Login{% endblock %}
 {% block content %}
-<h1>You have logged in. Welcome back!!</h1>
-{% if boolean %}
-<h1>Yeah that's true!</h1>
-{% endif %}
+<form action="" method="GET">
+  <h3 align="center">Login</h3>
+  <div class="form-group">
+    <label for="email">Email Address</label>
+    <input type="email" class="form-control" id="email" name="email" placeholder="Enter email..">
+    <label for="password">Password</label>
+    <input type="password" class="form-control" id="password" name="password" placeholder="Enter password...">
+  </div>
+  <br />
+  <button type="submit" class="btn btn-primary">Login</button>
+</form>
 {% endblock %}
