--- a/APIs/Python/Tech_With_Tim/website/templates/login.html
+++ b/APIs/Python/Tech_With_Tim/website/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Login{% endblock %}
 {% block content %}
-<form action="" method="GET">
+<form method="POST">
   <h3 align="center">Login</h3>
   <div class="form-group">
     <label for="email">Email Address</label>
