--- a/APIs/Python/Tech_With_Tim/website/templates/base.html
+++ b/APIs/Python/Tech_With_Tim/website/templates/base.html
@@ -28,6 +28,15 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <div class="navbar-nav">
+                        {% if user.is_authenticated %}
+                        <a class="nav-item nav-link" href="/" id="home">Home</a>
+                        <a
+                            class="nav-item nav-link"
+                            href="/auth/logout"
+                            id="logout"
+                            >Logout</a
+                        >
+                        {% else %}
                         <a
                             class="nav-item nav-link"
                             href="/auth/login"
@@ -40,13 +49,7 @@
                             id="sign-up"
                             >Sign Up</a
                         >
-                        <a
-                            class="nav-item nav-link"
-                            href="/auth/logout"
-                            id="logout"
-                            >Logout</a
-                        >
-                        <a class="nav-item nav-link" href="/" id="home">Home</a>
+                        {% endif %}
                     </div>
                 </div>
             </div>
