--- a/APIs/Python/Tech_With_Tim/website/templates/base.html
+++ b/APIs/Python/Tech_With_Tim/website/templates/base.html
@@ -89,6 +89,10 @@
             integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
             crossorigin="anonymous"
         ></script>
+        <script
+            type="text/javascript"
+            src="{{ url_for('static', filename='index.js') }}"
+        ></script>
     </body>
 </html>
 
