--- a/APIs/Python/Tech_With_Tim/website/templates/home.html
+++ b/APIs/Python/Tech_With_Tim/website/templates/home.html
@@ -3,7 +3,14 @@
 <h1 align="center">Notes</h1>
 <ul class="list-group list-group-flush" id="notes">
     {% for note in user.notes %}
-    <li class="list-group-item">{{ note.data }}</li>
+    <li class="list-group-item">
+        {{ note.data }}
+        <button
+            type="button"
+            class="float-end btn-close"
+            aria-label="Close"
+        ></button>
+    </li>
     {% endfor %}
 </ul>
 <form method="POST">
@@ -14,3 +21,12 @@
     </div>
 </form>
 {% endblock %}
+<span>
+    <button
+        type="button"
+        class="btn-close"
+        data-bs-dismiss="alert"
+        aria-label="Close"
+        onclick="deleteNote( {{ note.id }} )"
+    ></button>
+</span>
